--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "optimize": "workbox generateSW workbox-config.js"
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.8",
@@ -35,6 +36,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^6.2.1"
+    "vite": "^6.2.1",
+    "vite-plugin-imagemin": "^0.6.1",
+    "workbox-cli": "^7.3.0"
   }
 }
